# FFXIV-Screenshot-Organiser

./: Cargo.toml  README.md  config.example.json  config.yaml
src/: config.rs  main.rs  state.rs
src/config/: job.rs
