[package]
name = "screenshot_organiser"
version = "0.1.0"
authors = ["Anna Clemens <git@annaclemens.io>"]

edition = "2018"

[dependencies]
chrono = "0.4"
regex = "1"
notify = "4"
image = "0.23"
serde = "1"
serde_derive = "1"
serde_yaml = "0.8"
serde_regex = "1"
anyhow = "1"
tempdir = "0.3"
num_cpus = "1"
rayon = "1"
ctrlc = "3"
crossbeam-channel = "0.5"
libwebp = { version = "0.1", features = ["static"] }
